adjusted position fix causing navbar not centered

--- a/styles/blog-post.css
+++ b/styles/blog-post.css
@@ -1,16 +1,15 @@
 html .viewport {
-    height: 100%;
-    width: 100%;
+    height: 100vw;
+    width: 100vw;
     margin: 0;
     padding: 0;
 }
 
 body {
     font-size: 1em;
-    width: 95vw;
-    /***this way on iphone there is no horizontal scroll***/
+    width: 100%;
     height: auto;
-    margin: 0.2em;
+    margin: 0 auto;
     padding: 0;
     background: url("https://user-images.githubusercontent.com/33415537/34185320-62d61970-e52d-11e7-81d5-58b8cc2c9d90.gif") #6DF;
     background-size: cover;
@@ -21,7 +20,6 @@ body {
 
 /*********************Style Related******************/
 .header-content {
-    position: fixed;
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
@@ -259,7 +257,7 @@ footer {
     #container {
         font-size: 1em;
         padding-top: 0;
-        margin: 0.2em;
+        margin: 0 auto;
         display: grid;
         grid-gap: 0.2em;
         grid-template-columns: 1fr 1fr;
@@ -273,6 +271,9 @@ footer {
 
     .header-content {
         position: fixed;
+        top: 0;
+        left: 1%;
+        margin-left: -1%;
     }
 
     .intro {
@@ -316,9 +317,10 @@ footer {
 
 @media screen and (min-width: 1026px) {
     #container {
-        width: 98vw;
+        width: 98%;
         height: auto;
         min-height: 96vh;
+        margin: 0 auto;
         /** this min-height and the above width and height are so there is no jumping when jquery executes toggle effect, still jumping on smaller screens though**/
         font-size: 1.1em;
         grid-gap: 0.2em;
@@ -330,6 +332,14 @@ footer {
 
     .header {
         grid-area: 1 / 1 / 2 / 9;
+    }
+
+    .header-content {
+        position: fixed;
+        width: 99%;
+        top: 0;
+        left: 1%;
+        margin-left: -1%;
     }
 
     .intro {
